setting env variables

--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -12,14 +12,15 @@ jobs:
     name: Build Infrastructure
     runs-on: ubuntu-latest
     environment: ${{github.ref_name}}
+    env:
+      Azure_ClientId: ${{ secrets.Azure_ClientId }}
+      Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
+      Azure_TenantId: ${{ secrets.Azure_TenantId }}
+      Azure_SubcriptionId: ${{ secrets.Azure_SubcriptionId }}
     steps:
       - name: Get secret values
         run: |
           echo ${{ github.ref_name}}
-          Azure_ClientId: ${{ secrets.Azure_ClientId }}
-          Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
-          Azure_TenantId: ${{ secrets.Azure_TenantId }}
-          Azure_SubcriptionId: ${{ secrets.Azure_SubcriptionId }}
           echo "Azure_ClientId:" $Azure_ClientId
       - name: Checkout code
         uses: actions/checkout@v2
