added double quotes

--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -29,8 +29,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup the Infrastructure in Azure
         run: |
-          az --debug login --service-principal --username $Azure_ClientId --password $Azure_ClientSecret --tenant $Azure_TenantId
-          az deployment sub create --subscription $Azure_SubcriptionId --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
+          az login --service-principal --username "$Azure_ClientId" --password "$Azure_ClientSecret" --tenant "$Azure_TenantId"
+          az deployment sub create --subscription "$Azure_SubcriptionId" --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
 
   deploy-app:
     needs: build-infra
