--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -37,7 +37,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{github.ref_name}}
     env:
-      Azure_WebApp: ${{ secrets.Azure_WebApp }}  
+      Azure_WebApp: ${{ secrets.Azure_WebApp }}
+      Azure_ClientId: ${{ secrets.Azure_ClientId }}
+      Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
+      Azure_TenantId: ${{ secrets.Azure_TenantId }}
+      Azure_SubcriptionId: ${{ secrets.Azure_SubcriptionId }}
     steps:
       - name: Get secrets values 
         run: |
