--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -62,11 +62,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          creds: "$Azure_ClientSecret"
-          tenant-id: "$Azure_TenantId"
-          client-id: "$Azure_ClientId"
-          subscription-id: "$Azure_SubcriptionId"
-
+          creds: '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"$Azure_TenantId"}'
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
