using secrets directly

--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          creds: '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"$Azure_TenantId"}'
+          creds: '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"${{ secrets.Azure_TenantId }}"}'
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
