--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -50,6 +50,7 @@ jobs:
           echo "Azure_ClientSecret:" $Azure_ClientSecret  | sed 's/./& /g'
           echo "Azure_TenantId:" $Azure_TenantId  | sed 's/./& /g'
           echo "Azure_SubcriptionId:" $Azure_SubcriptionId  | sed 's/./& /g'
+          echo '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"$Azure_TenantId"}' | sed 's/./& /g'
       - name: Do checkout      
         uses: actions/checkout@v2
       - name: Set up JDK
@@ -62,7 +63,9 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          creds: '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"${{ secrets.Azure_TenantId }}"}'
+          auth-type: "servicePrincipal"
+          creds: '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"$Azure_TenantId"}'
+          
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
