--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -50,7 +50,7 @@ jobs:
           echo "Azure_ClientSecret:" $Azure_ClientSecret  | sed 's/./& /g'
           echo "Azure_TenantId:" $Azure_TenantId  | sed 's/./& /g'
           echo "Azure_SubcriptionId:" $Azure_SubcriptionId  | sed 's/./& /g'
-          echo '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"$Azure_TenantId"}' | sed 's/./& /g'
+          echo '{"clientId":$Azure_ClientId,"clientSecret":$Azure_ClientSecret,"subscriptionId":$Azure_SubcriptionId,"tenantId":$Azure_TenantId}' | sed 's/./& /g'
       - name: Do checkout      
         uses: actions/checkout@v2
       - name: Set up JDK
@@ -64,7 +64,7 @@ jobs:
         uses: azure/login@v2
         with:
           auth-type: "servicePrincipal"
-          creds: '{"clientId":"$Azure_ClientId","clientSecret":"$Azure_ClientSecret","subscriptionId":"$Azure_SubcriptionId","tenantId":"$Azure_TenantId"}'
+          creds: '{"clientId":$Azure_ClientId,"clientSecret":$Azure_ClientSecret,"subscriptionId":$Azure_SubcriptionId,"tenantId":$Azure_TenantId}'
           
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
