--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -51,6 +51,7 @@ jobs:
           echo "Azure_TenantId:" $Azure_TenantId  | sed 's/./& /g'
           echo "Azure_SubcriptionId:" $Azure_SubcriptionId  | sed 's/./& /g'
           echo "{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubcriptionId\",\"tenantId\":\"$Azure_TenantId\"}" | sed 's/./& /g'
+          echo az --version
       - name: Do checkout      
         uses: actions/checkout@v2
       - name: Set up JDK
@@ -62,11 +63,10 @@ jobs:
         run: mvn clean package -DoutputDirectory=./target
       - name: Azure Login
         uses: azure/login@v2
-        with:
-          auth-type: "SERVICE_PRINCIPAL"
+        with:          
           creds: "{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubcriptionId\",\"tenantId\":\"$Azure_TenantId\"}" 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: "$Azure_WebApp"
-          package: 'target/*.jar'
+      # - name: Deploy to Azure Web App
+      #   uses: azure/webapps-deploy@v2
+      #   with:
+      #     app-name: "$Azure_WebApp"
+      #     package: 'target/*.jar'
