--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -68,8 +68,11 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          auth-type: "SERVICE_PRINCIPAL"          
-          creds: "{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubcriptionId\",\"tenantId\":\"$Azure_TenantId\"}" 
+          auth-type: "SERVICE_PRINCIPAL" 
+          tenant-id: "$Azure_TenantId"
+          client-id: "$Azure_ClientId"
+          subscription-id: "$Azure_SubcriptionId"
+          #client-secret: "$Azure_ClientSecret"
       # - name: Deploy to Azure Web App
       #   uses: azure/webapps-deploy@v2
       #   with:
