--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -33,7 +33,7 @@ jobs:
   #         az deployment sub create --subscription "$Azure_SubcriptionId" --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
 
   deploy-app:
-    needs: build-infra
+    # needs: build-infra
     runs-on: ubuntu-latest
     environment: ${{github.ref_name}}
     env:
