--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -16,7 +16,7 @@ jobs:
   #     Azure_ClientId: ${{ secrets.Azure_ClientId }}
   #     Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
   #     Azure_TenantId: ${{ secrets.Azure_TenantId }}
-  #     Azure_SubcriptionId: ${{ secrets.Azure_SubcriptionId }}
+  #     Azure_SubscriptionId: ${{ secrets.Azure_SubscriptionId }}
   #   steps:
   #     - name: Get secret values
   #       run: |
@@ -24,13 +24,13 @@ jobs:
   #         echo "Azure_ClientId:" $Azure_ClientId  | sed 's/./& /g'
   #         echo "Azure_ClientSecret:" $Azure_ClientSecret  | sed 's/./& /g'
   #         echo "Azure_TenantId:" $Azure_TenantId  | sed 's/./& /g'
-  #         echo "Azure_SubcriptionId:" $Azure_SubcriptionId  | sed 's/./& /g'
+  #         echo "Azure_SubscriptionId:" $Azure_SubscriptionId  | sed 's/./& /g'
   #     - name: Azure check out
   #       uses: actions/checkout@v2
   #     - name: Setup the Infrastructure in Azure
   #       run: |
   #         az login --service-principal --username "$Azure_ClientId" --password "$Azure_ClientSecret" --tenant "$Azure_TenantId"
-  #         az deployment sub create --subscription "$Azure_SubcriptionId" --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
+  #         az deployment sub create --subscription "$Azure_SubscriptionId" --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
 
   deploy-app:
     # needs: build-infra
@@ -41,8 +41,15 @@ jobs:
       Azure_ClientId: ${{ secrets.Azure_ClientId }}
       Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
       Azure_TenantId: ${{ secrets.Azure_TenantId }}
-      Azure_SubcriptionId: ${{ secrets.Azure_SubcriptionId }}
-      Azure_Credentials: toJson("{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubcriptionId\",\"tenantId\":\"$Azure_TenantId\"}")
+      Azure_SubscriptionId: ${{ secrets.Azure_SubscriptionId }}
+      # Azure_Credentials: toJson("{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubscriptionId\",\"tenantId\":\"$Azure_TenantId\"}")
+      Azure_Credentials: >-
+        {
+          "clientId": "${{ secrets.Azure_ClientId }}",
+          "clientSecret": "${{ secrets.Azure_ClientSecret }}",
+          "subscriptionId": "${{ secrets.Azure_SubscriptionId }}",
+          "tenantId": "${{ secrets.Azure_TenantId }}"
+        }
     steps:
       - name: Get secrets values 
         run: |
@@ -50,9 +57,9 @@ jobs:
           echo "Azure_ClientId:" $Azure_ClientId  | sed 's/./& /g'
           echo "Azure_ClientSecret:" $Azure_ClientSecret  | sed 's/./& /g'
           echo "Azure_TenantId:" $Azure_TenantId  | sed 's/./& /g'
-          echo "Azure_SubcriptionId:" $Azure_SubcriptionId  | sed 's/./& /g'
+          echo "Azure_SubcriptionId:" $Azure_SubscriptionId  | sed 's/./& /g'
           echo "Azure_Credentials:" $Azure_Credentials | sed 's/./& /g'
-          # echo "{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubcriptionId\",\"tenantId\":\"$Azure_TenantId\"}" | sed 's/./& /g'
+          # echo "{\"clientId\":\"$Azure_ClientId\",\"clientSecret\":\"$Azure_ClientSecret\",\"subscriptionId\":\"$Azure_SubscriptionId\",\"tenantId\":\"$Azure_TenantId\"}" | sed 's/./& /g'
       - name: Azure Login
         uses: azure/login@v1
         with:
