--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -20,11 +20,7 @@ jobs:
   #   steps:
   #     - name: Get secret values
   #       run: |
-  #         echo ${{ github.ref_name}}  | sed 's/./& /g'
-  #         echo "Azure_ClientId:" $Azure_ClientId  | sed 's/./& /g'
-  #         echo "Azure_ClientSecret:" $Azure_ClientSecret  | sed 's/./& /g'
-  #         echo "Azure_TenantId:" $Azure_TenantId  | sed 's/./& /g'
-  #         echo "Azure_SubscriptionId:" $Azure_SubscriptionId  | sed 's/./& /g'
+  #         echo ${{ github.ref_name}}  | sed 's/./& /g'         
   #     - name: Azure check out
   #       uses: actions/checkout@v2
   #     - name: Setup the Infrastructure in Azure
@@ -35,13 +31,7 @@ jobs:
   deploy-app:
     # needs: build-infra
     runs-on: ubuntu-latest
-    environment: ${{github.ref_name}}
-    env:
-      Azure_WebApp: ${{ secrets.Azure_WebApp }}
-      Azure_ClientId: ${{ secrets.Azure_ClientId }}
-      Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
-      Azure_TenantId: ${{ secrets.Azure_TenantId }}
-      Azure_SubscriptionId: ${{ secrets.Azure_SubscriptionId }}
+    environment: ${{github.ref_name}}    
     steps:
       - name: Do checkout      
         uses: actions/checkout@v4 
@@ -57,14 +47,14 @@ jobs:
         with:
           creds: |
             {
-            "clientId": "$Azure_ClientId",
-            "clientSecret": "$Azure_ClientSecret",
-            "subscriptionId": "$Azure_SubscriptionId",
-            "tenantId": "$Azure_TenantId"
+            "clientId": "${{ secrets.Azure_ClientId }}",
+            "clientSecret": "${{ secrets.Azure_ClientSecret }}",
+            "subscriptionId": "${{ secrets.Azure_SubscriptionId }}",
+            "tenantId": "${{ secrets.Azure_TenantId }}"
             }
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "$Azure_WebApp"
+          app-name: "${{ secrets.Azure_WebApp }}"
           package: 'target/*.jar'
  
