final - just change location

--- a/.github/workflows/bicep-deploy.yml
+++ b/.github/workflows/bicep-deploy.yml
@@ -11,12 +11,7 @@ jobs:
   build-infra:
     name: Build Infrastructure
     runs-on: ubuntu-latest
-    environment: ${{github.ref_name}}
-    env:
-      Azure_ClientId: ${{ secrets.Azure_ClientId }}
-      Azure_ClientSecret: ${{ secrets.Azure_ClientSecret }}
-      Azure_TenantId: ${{ secrets.Azure_TenantId }}
-      Azure_SubscriptionId: ${{ secrets.Azure_SubscriptionId }}
+    environment: ${{github.ref_name}}   
     steps:
       - name: Print the current environment name and branch name
         run: |
@@ -25,8 +20,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup the Infrastructure in Azure
         run: |
-          az login --service-principal --username "$Azure_ClientId" --password "$Azure_ClientSecret" --tenant "$Azure_TenantId"
-          az deployment sub create --subscription "$Azure_SubscriptionId" --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
+          az login --service-principal --username "${{ secrets.Azure_ClientId }}" --password "${{ secrets.Azure_ClientSecret }}" --tenant "${{ secrets.Azure_TenantId }}"
+          az deployment sub create --subscription "${{ secrets.Azure_SubscriptionId }}" --name cbam-deployment --location eastus --template-file bicep/main.bicep --parameters bicep/parameters-dev.json --parameters env=temp
 
   deploy-app:
     needs: build-infra
